adding new makefile

--- a/projects/heinlec/dominion/Makefile
+++ b/projects/heinlec/dominion/Makefile
@@ -72,74 +72,16 @@ unittestresults.out: dominion.o interface.o
 	gcov -f -b dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out 
 
-#unittestresults.out: cardtest1.c cardtest2.c cardtest3.c cardtest4.c unittest1.c unittest2.c unittest3.c unittest4.c dominion.c rngs.c
-
-	#echo "Result for running Dominion test suite:" > unittestresults.out
+randomtests.out: dominion.o interface.o
+	gcc -o randomtestadventurer -g randomtestadventurer.c dominion.o rngs.o interface.o $(CFLAGS)
+	gcc -o randomcardtest1 -g randomtestcard1.c dominion.o rngs.o interface.o $(CFLAGS)
+	gcc -o randomcardtest2 -g randomtestcard2.c dominion.o rngs.o interface.o $(CFLAGS)
 	
-	#echo "unittest1.c:" >> unittestresults.out
-	#gcc -o unitTest1 -g  unittest1.c dominion.c rngs.c $(CFLAGS)
-	#./unitTest1 >> unittestresults.out
-	#gcov unittest1.c >> unittestresults.out
-	#cat unittest1.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "unittest2.c:" >> unittestresults.out
-	#gcc -o unitTest2 -g  unittest2.c dominion.c rngs.c $(CFLAGS)
-	#./unitTest2 >> unittestresults.out
-	#gcov unittest2.c >> unittestresults.out
-	#cat unittest2.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "unittest3.c:" >> unittestresults.out
-	#gcc -o unitTest3 -g  unittest3.c dominion.c rngs.c $(CFLAGS)
-	#./unitTest3 >> unittestresults.out
-	#gcov unittest3.c >> unittestresults.out
-	#cat unittest3.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "unittest4.c:" >> unittestresults.out
-	#gcc -o unitTest4 -g  unittest4.c dominion.c rngs.c $(CFLAGS)
-	#./unitTest4 >> unittestresults.out
-	#gcov unittest4.c >> unittestresults.out
-	#cat unittest4.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "cardtest1.c:" >> unittestresults.out
-	#gcc -o cardTest1 -g  cardtest1.c dominion.c rngs.c $(CFLAGS)
-	#./cardTest1 >> unittestresults.out
-	#gcov cardtest1.c >> unittestresults.out
-	#cat cardtest1.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "cardtest2.c:" >> unittestresults.out
-	#gcc -o cardTest2 -g  cardtest2.c dominion.c rngs.c $(CFLAGS)
-	#./cardTest2 >> unittestresults.out
-	#gcov cardtest2.c >> unittestresults.out
-	#cat cardtest2.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "cardtest3.c:" >> unittestresults.out
-	#gcc -o cardTest3 -g  cardtest3.c dominion.c rngs.c $(CFLAGS)
-	#./cardTest3 >> unittestresults.out
-	#gcov cardtest3.c >> unittestresults.out
-	#cat cardtest3.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-	
-	#echo "cardtest4.c:" >> unittestresults.out
-	#gcc -o cardTest4 -g  cardtest4.c dominion.c rngs.c $(CFLAGS)
-	#./cardTest4 >> unittestresults.out
-	#gcov cardtest4.c >> unittestresults.out
-	#cat cardtest4.c.gcov >> unittestresults.out
-	#gcov dominion.c >> unittestresults.out
-	#cat dominion.c.gcov >> unittestresults.out
-
+	./randomtestadventurer >> randomtestresults.out
+	./randomcardtest1 >> randomtestresults.out
+	./randomcardtest2 >> randomtestresults.out
+	gcov -f -b dominion.c >> randomtestresults.out
+	cat dominion.c.gcov >> randomtestresults.out
 
 runtests: testUpdateCoins 
 	./testUpdateCoins &> unittestresult.out
